sfdx-source/apex-queue/main/objects/QueueRuntime__c/QueueRuntime__c.object-meta.xml
<CustomObject>
    <description>Stores mutable queue-level runtime state for the runner control loop, including pause status, wake timing, runner identity, sweep timing, and active worker counts.</description>
    <label>Queue Runtime</label>
    <nameField>
        <displayFormat>QueueRuntime-{00000000}</displayFormat>
        <label>Queue Runtime Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queue Runtimes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>