sfdx-source/apex-queue/main/objects/QueueRuntime__c/fields/ActiveWorkerCount__c.field-meta.xml
<CustomField>
    <fullName>ActiveWorkerCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Cached count of in-flight worker executions currently associated with this queue.</description>
    <inlineHelpText>Used for queue-level liveness and operational visibility.</inlineHelpText>
    <label>Active Worker Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>