sfdx-source/apex-queue/main/objects/QueueRuntime__c/fields/AsyncApexJobId__c.field-meta.xml
<CustomField>
    <fullName>AsyncApexJobId__c</fullName>
    <description>Async Apex job identifier for the batch or scheduled wake currently carrying the queue runner plan.</description>
    <inlineHelpText>Stores the platform async job id for the active batch or scheduled wake running the current runner plan.</inlineHelpText>
    <label>Async Apex Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>