sfdx-source/apex-queue/main/objects/QueueRuntime__c/fields/IsPaused__c.field-meta.xml
<CustomField>
    <fullName>IsPaused__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stops the worker loop from claiming new jobs for this queue while in-flight work finishes.</description>
    <inlineHelpText>Queue-level pause flag.</inlineHelpText>
    <label>Is Paused</label>
    <type>Checkbox</type>
</CustomField>