sfdx-source/apex-queue/main/objects/QueueRuntime__c/fields/LastPumpAt__c.field-meta.xml
<CustomField>
    <fullName>LastPumpAt__c</fullName>
    <description>Last time the queue worker loop touched or refreshed this runtime row.</description>
    <inlineHelpText>Most recent time the worker loop executed or refreshed this queue.</inlineHelpText>
    <label>Last Pump At</label>
    <type>DateTime</type>
</CustomField>