sfdx-source/apex-queue/main/objects/QueueRuntime__c/fields/LastSweepAt__c.field-meta.xml
<CustomField>
    <fullName>LastSweepAt__c</fullName>
    <description>Last time the sweeper inspected the queue for stalled jobs.</description>
    <inlineHelpText>Most recent stalled-job sweep time.</inlineHelpText>
    <label>Last Sweep At</label>
    <type>DateTime</type>
</CustomField>