sfdx-source/apex-queue/main/objects/QueueRuntime__c/fields/NextPumpAt__c.field-meta.xml
<CustomField>
    <fullName>NextPumpAt__c</fullName>
    <description>Next intended wake time for the queue worker loop.</description>
    <inlineHelpText>Used by runtime orchestration to know when this queue should wake again.</inlineHelpText>
    <label>Next Pump At</label>
    <type>DateTime</type>
</CustomField>