sfdx-source/apex-queue/main/objects/QueueRuntime__c/fields/QueueName__c.field-meta.xml
<CustomField>
    <fullName>QueueName__c</fullName>
    <description>Logical queue name that this runtime record governs.</description>
    <inlineHelpText>One runtime row per queue name.</inlineHelpText>
    <label>Queue Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>