sfdx-source/apex-queue/main/objects/QueueRuntime__c/fields/WorkerToken__c.field-meta.xml
<CustomField>
    <fullName>WorkerToken__c</fullName>
    <description>Opaque token that identifies the currently valid queue worker plan and invalidates stale or replaced wakes.</description>
    <inlineHelpText>Updated whenever the queue replaces or advances its current worker plan.</inlineHelpText>
    <label>Worker Token</label>
    <length>80</length>
    <type>Text</type>
</CustomField>